Created fine-tuning scripts and wrote logic of further aims

--- a/src/fine-tune_infer_01.ipynb
+++ b/src/fine-tune_infer_01.ipynb
@@ -87,7 +87,7 @@
     "try: os.mknod(join(MODELS_DIR, exp_name, f'{exp_name}.txt'))\n",
     "except: pass\n",
     "\n",
-    "BS = config['\\ufeffbatch_size']\n",
+    "BS = config['batch_size']\n",
     "LR = config['learning_rate']\n",
     "EPOCHS = config['n_epochs']\n",
     "WORKERS = config['n_workers']\n",
@@ -130,7 +130,10 @@
     "    \n",
     "    best_val = None \n",
     "    patience = ES_PATIENCE\n",
+    "    model_path = join(MODELS_DIR, exp_name, f'fold_{fold}_weight.pth')\n",
+    "\n",
     "    model = timm.create_model(model_name, pretrained=True, num_classes=1)\n",
+    "    model = torch.load(model_path)\n",
     "    model.cuda()\n",
     "    \n",
     "    optim = AdamW(model.parameters(), lr=LR, amsgrad=True)\n",
@@ -146,7 +149,6 @@
     "    train_loader = DataLoader(train, batch_size=BS, shuffle=True, num_workers=WORKERS)\n",
     "    val_loader = DataLoader(val, batch_size=BS, shuffle=False, num_workers=WORKERS)\n",
     "\n",
-    "    model_path = join(MODELS_DIR, exp_name, f'fold_{fold}_weight.pth')\n",
     "\n",
     "    for epoch in range(EPOCHS):\n",
     "        start_time = time.time()\n",
@@ -197,16 +199,16 @@
     "                    print('Early stopping. Best Val roc_auc: {:.4f}'.format(best_val))\n",
     "                    break\n",
     "    \n",
-    "    test_loader = DataLoader(test, batch_size=BS, shuffle=False, num_workers=WORKERS)\n",
-    "    model = torch.load(model_path)\n",
-    "    model.eval()\n",
-    "    tta_model = tta.ClassificationTTAWrapper(model, tta_transforms)\n",
-    "    with torch.no_grad():\n",
-    "        for i, (x_test, _) in enumerate(tqdm(test_loader, total=len(test_loader), position=0, leave=True)):\n",
-    "            x_test = torch.tensor(x_test, device=device, dtype=torch.float32)\n",
-    "            z_test = tta_model(x_test)\n",
-    "            z_test = torch.sigmoid(z_test)\n",
-    "            preds[i*x_test.shape[0]:i*x_test.shape[0] + x_test.shape[0]] += z_test\n",
+    "    # test_loader = DataLoader(test, batch_size=BS, shuffle=False, num_workers=WORKERS)\n",
+    "    # model = torch.load(model_path)\n",
+    "    # model.eval()\n",
+    "    # tta_model = tta.ClassificationTTAWrapper(model, tta_transforms)\n",
+    "    # with torch.no_grad():\n",
+    "    #     for i, (x_test, _) in enumerate(tqdm(test_loader, total=len(test_loader), position=0, leave=True)):\n",
+    "    #         x_test = torch.tensor(x_test, device=device, dtype=torch.float32)\n",
+    "    #         z_test = tta_model(x_test)\n",
+    "    #         z_test = torch.sigmoid(z_test)\n",
+    "    #         preds[i*x_test.shape[0]:i*x_test.shape[0] + x_test.shape[0]] += z_test\n",
     "\n",
     "    del train, val, train_loader, val_loader, train_df, valid_df, x, y, x_val, y_val, x_test, _\n",
     "    torch.cuda.empty_cache()\n",
@@ -221,13 +223,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Making submission...')\n",
-    "sub = pd.read_csv(join(INPUT_DIR, 'sample_submission.csv'))\n",
-    "sub['target'] = preds.cpu().detach().numpy().reshape(-1,)\n",
-    "sub.to_csv(join(SUBMISSIONS_DIR, f'{exp_name}.csv'), index=False)\n",
-    "torch.cuda.empty_cache()\n",
-    "gc.collect()\n",
-    "print('Submission is created...')"
+    "# print('Making submission...')\n",
+    "# sub = pd.read_csv(join(INPUT_DIR, 'sample_submission.csv'))\n",
+    "# sub['target'] = preds.cpu().detach().numpy().reshape(-1,)\n",
+    "# sub.to_csv(join(SUBMISSIONS_DIR, f'{exp_name}.csv'), index=False)\n",
+    "# torch.cuda.empty_cache()\n",
+    "# gc.collect()\n",
+    "# print('Submission is created...')"
    ]
   },
   {
