--- a/src/train_infer_03.ipynb
+++ b/src/train_infer_03.ipynb
@@ -79,7 +79,7 @@
     "try: os.mknod(join(MODELS_DIR, exp_name, f'{exp_name}.txt'))\n",
     "except: pass\n",
     "\n",
-    "BS = config['\\ufeffbatch_size']\n",
+    "BS = config['batch_size']\n",
     "LR = config['learning_rate']\n",
     "EPOCHS = config['n_epochs']\n",
     "WORKERS = config['n_workers']\n",
