Implemented new idea on Redefined Class-Assigning Boundary

--- a/src/Create_Experiments_And_EDA.ipynb
+++ b/src/Create_Experiments_And_EDA.ipynb
@@ -2,32 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from os.path import join"
+    "from os.path import join\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "INPUT_DIR = '../input'\n",
     "SUBMISSIONS_DIR = '../submissions'\n",
     "submission_name = 'exp_train_02.csv'\n",
-    "target = 'target'"
+    "\n",
+    "target = 'target'\n",
+    "target_class = 'target_class'\n",
+    "\n",
+    "PSEUDOLABELS_DIR = join(INPUT_DIR, 'pseudo-labels/')\n",
+    "os.makedirs(PSEUDOLABELS_DIR, exist_ok=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create experiments (stratificially folded .csv on each experiment)"
+    "# Create experiments (stratificially folded `.csv` on each experiment)"
    ]
   },
   {
