Commit before running second parts of experiments

--- a/src/Run_Experiments.ipynb
+++ b/src/Run_Experiments.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "# script params\n",
     "exp_tuneinfer_name = 'exp_finetune_01'\n",
-    "train_only_last_layer_options = ['true']\n",
+    "train_only_last_layer_options = ['false'] # ['true']\n",
     "folds_train_files = [splitext(basename(path))[0] for path in glob(join(SMOOTHEDLABELS_DIR, '*_folds_*'))]\n",
     "\n",
     "finetune_params = list(product(train_only_last_layer_options, folds_train_files))\n",
@@ -47,18 +47,11 @@
    "source": [
     "for i, (train_only_last_layer, folds_train_file) in enumerate(tqdm(finetune_params)):\n",
     "    start_time = time.time()\n",
-    "    log_file_path = join(MODELS_DIR, folds_train_file, f'logs.txt')\n",
+    "    log_file_path = join(MODELS_DIR, folds_train_file, f'logs_{train_only_last_layer}.txt')\n",
     "    os.makedirs(join(MODELS_DIR, folds_train_file), exist_ok=True)\n",
     "    !python finetune_infer.py -c $exp_tuneinfer_name -l $train_only_last_layer -f $folds_train_file > $log_file_path\n",
     "    print(f'Experiment №{i+1} ended in ~{str(round((time.time() - start_time) // 60)).rjust(2)} minutes (- 17)')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
