Second part of all experiments is done

--- a/src/finetune_infer_01.ipynb
+++ b/src/finetune_infer_01.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "exp_tuneinfer_name = 'exp_finetune_01'\n",
     "folds_train_file = 'exp_train_02_rdf_bnd-50-1_folds_stratified'\n",
-    "train_only_last_layer = True"
+    "train_only_last_layer = False"
    ]
   },
   {
@@ -233,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
