--- a/src/Run_Experiments.ipynb
+++ b/src/Run_Experiments.ipynb
@@ -52,6 +52,13 @@
     "    !python finetune_infer.py -c $exp_tuneinfer_name -l $train_only_last_layer -f $folds_train_file > $log_file_path\n",
     "    print(f'Experiment №{i+1} ended in ~{str(round((time.time() - start_time) // 60)).rjust(2)} minutes (- 17)')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -70,7 +77,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
