Changes show_prediction_stats script

--- a/src/EDA of test predictions.ipynb
+++ b/src/EDA of test predictions.ipynb
@@ -37,21 +37,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Number of samples in train: 33126\n",
-      "Target dictribution:\n",
-      "0    98.237034\n",
-      "1     1.762966\n",
-      "Name: target, dtype: float64\n",
-      "\n",
-      "Number of samples in submission: 10982\n",
-      "Target dictribution:\n",
-      "0    99.480969\n",
-      "1     0.519031\n",
-      "Name: target, dtype: float64\n"
-     ]
+     "name": "stdout",
+     "text": "Number of samples in train: 33126\nTarget dictribution:\n0    98.237034\n1     1.762966\nName: target, dtype: float64\n\nNumber of samples in submission: 10982\nTarget dictribution:\n0    99.480969\n1     0.519031\nName: target, dtype: float64\n"
     }
    ],
    "source": [
@@ -70,26 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Number (N) of predictions in bins (Assuming class = 0 if p<0.5 else 1)\n",
-      "             Abs      % % of its class\n",
-      "[0, 0.05]  10057  91.58          92.05\n",
-      "[0, 0.1]   10430  94.97          95.47\n",
-      "[0, 0.15]  10599  96.51          97.02\n",
-      "[0, 0.2]   10712  97.54          98.05\n",
-      "[0, 0.5)   10925  99.48         100.00\n",
-      "[0.5, 1]      57   0.52         100.00\n",
-      "[0.8, 1]       5   0.05           8.77\n",
-      "[0.85, 1]      1   0.01           1.75\n",
-      "[0.9, 1]       0   0.00           0.00\n",
-      "[0.95, 1]      0   0.00           0.00\n"
-     ]
+     "name": "stdout",
+     "text": "Number (N) of predictions in bins (Assuming class = 0 if p<0.5 else 1)\n               Abs      % % of its class\n[0, 0.05]    10057  91.58          92.05\n(0.05, 0.1]    373   3.40           3.41\n(0.1, 0.15]    169   1.54           1.55\n(0.15, 0.2]    113   1.03           1.03\n(0.2, 0.5)     213   1.94           1.95\n[0.5, 0.8)      52   0.47          91.23\n[0.8, 0.85)      4   0.04           7.02\n[0.85, 0.9)      1   0.01           1.75\n[0.9, 0.95)      0   0.00           0.00\n[0.95, 1]        0   0.00           0.00\n"
     }
    ],
    "source": [
@@ -109,8 +84,15 @@
     "        \n",
     "        rows.append([abs_val, f'{pct_val:.2f}', f'{pct_class_val:.2f}'])\n",
     "\n",
-    "    indices = [str(custom_bin) for (class_, custom_bin) in custom_bins]\n",
-    "    indices[len(indices)//2-1] = '[0, 0.5)'\n",
+    "    indices = [f'[{round(custom_bin[0], 2)}, {round(custom_bin[1], 2)}]' for (class_, custom_bin) in custom_bins]\n",
+    "    for i in range(len(indices)):\n",
+    "        if i < len(indices) // 2:\n",
+    "            indices[i] = '(' + indices[i][1:]\n",
+    "        else:\n",
+    "            indices[i] = indices[i][:-1] + ')'\n",
+    "    indices[0] = '[' + indices[0][1:-1] + ']'\n",
+    "    indices[(len(indices) // 2)-1] = indices[(len(indices) // 2)-1][:-1] + ')'\n",
+    "    indices[-1] = indices[-1][:-1] + ']'\n",
     "\n",
     "    rows_df = pd.DataFrame(rows, index=indices, columns=['Abs', '%', '% of its class'])\n",
     "\n",
@@ -118,10 +100,18 @@
     "    print(rows_df)\n",
     "\n",
     "\n",
-    "custom_bins = [[0, [0, 0.05]], [0, [0, 0.10]], [0, [0, 0.15]], [0, [0, 0.20]], [0, [0, 0.50 - 1e-12]], \n",
-    "               [1, [0.50, 1]], [1, [0.80, 1]], [1, [0.85, 1]], [1, [0.90, 1]], [1, [0.95, 1]]]\n",
+    "custom_bins = [[0, [0, 0.05]], [0, [0.05 - 1e-12, 0.10]], [0, [0.10 - 1e-12, 0.15]], [0, [0.15 - 1e-12, 0.20]], [0, [0.20 - 1e-12, 0.50 - 1e-12]], \n",
+    "               [1, [0.50, 0.80 - 1e-12]], [1, [0.80, 0.85 - 1e-12]], [1, [0.85, 0.90 - 1e-12]], [1, [0.90, 0.95 - 1e-12]], [1, [0.95, 1]]]\n",
+    "\n",
     "print_bins_distribution_info(submission_df, custom_bins)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -140,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
