Fixed show_prediction_stats.py due to round(0.5) == 0

--- a/src/EDA of test predictions.ipynb
+++ b/src/EDA of test predictions.ipynb
@@ -58,13 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Number (N) of predictions in bins (Assuming class = 0 if p<0.5 else 1)\n               Abs      % % of its class\n[0, 0.05]    10057  91.58          92.05\n(0.05, 0.1]    373   3.40           3.41\n(0.1, 0.15]    169   1.54           1.55\n(0.15, 0.2]    113   1.03           1.03\n(0.2, 0.5)     213   1.94           1.95\n[0.5, 0.8)      52   0.47          91.23\n[0.8, 0.85)      4   0.04           7.02\n[0.85, 0.9)      1   0.01           1.75\n[0.9, 0.95)      0   0.00           0.00\n[0.95, 1]        0   0.00           0.00\n"
+     "text": "Number (N) of predictions in bins (Assuming class = 0 if p<=0.5 else 1)\n               Abs      % % of its class\n[0, 0.05]    10057  91.58          92.05\n(0.05, 0.1]    373   3.40           3.41\n(0.1, 0.15]    169   1.54           1.55\n(0.15, 0.2]    113   1.03           1.03\n(0.2, 0.5]     213   1.94           1.95\n(0.5, 0.8)      52   0.47          91.23\n[0.8, 0.85)      4   0.04           7.02\n[0.85, 0.9)      1   0.01           1.75\n[0.9, 0.95)      0   0.00           0.00\n[0.95, 1]        0   0.00           0.00\n"
     }
    ],
    "source": [
@@ -91,17 +91,17 @@
     "        else:\n",
     "            indices[i] = indices[i][:-1] + ')'\n",
     "    indices[0] = '[' + indices[0][1:-1] + ']'\n",
-    "    indices[(len(indices) // 2)-1] = indices[(len(indices) // 2)-1][:-1] + ')'\n",
+    "    indices[len(indices) // 2] = '(' + indices[len(indices) // 2][1:]\n",
     "    indices[-1] = indices[-1][:-1] + ']'\n",
     "\n",
     "    rows_df = pd.DataFrame(rows, index=indices, columns=['Abs', '%', '% of its class'])\n",
     "\n",
-    "    print('Number (N) of predictions in bins (Assuming class = 0 if p<0.5 else 1)')\n",
+    "    print('Number (N) of predictions in bins (Assuming class = 0 if p<=0.5 else 1)')\n",
     "    print(rows_df)\n",
     "\n",
     "\n",
-    "custom_bins = [[0, [0, 0.05]], [0, [0.05 - 1e-12, 0.10]], [0, [0.10 - 1e-12, 0.15]], [0, [0.15 - 1e-12, 0.20]], [0, [0.20 - 1e-12, 0.50 - 1e-12]], \n",
-    "               [1, [0.50, 0.80 - 1e-12]], [1, [0.80, 0.85 - 1e-12]], [1, [0.85, 0.90 - 1e-12]], [1, [0.90, 0.95 - 1e-12]], [1, [0.95, 1]]]\n",
+    "custom_bins = [[0, [0, 0.05]], [0, [0.05 - 1e-12, 0.10]], [0, [0.10 - 1e-12, 0.15]], [0, [0.15 - 1e-12, 0.20]], [0, [0.20 - 1e-12, 0.50]], \n",
+    "               [1, [0.50 + 1e-12, 0.80 - 1e-12]], [1, [0.80, 0.85 - 1e-12]], [1, [0.85, 0.90 - 1e-12]], [1, [0.90, 0.95 - 1e-12]], [1, [0.95, 1]]]\n",
     "\n",
     "print_bins_distribution_info(submission_df, custom_bins)"
    ]
