Added hold-out prediction saving

--- a/src/train_infer_03.ipynb
+++ b/src/train_infer_03.ipynb
@@ -49,12 +49,12 @@
      "output_type": "stream",
      "text": [
       "Config params:\n",
-      "{'INPUT_DIR': '../input/', 'MODELS_DIR': '../models/', 'SUBMISSIONS_DIR': '../submissions/', 'batch_size': 10, 'learning_rate': 0.001, 'n_epochs': 25, 'n_workers': 8, 'early_stopping_patience': 6, 'reduce_lr_on_plateau_patience': 3, 'reduce_lr_on_plateau_factor': 0.2, 'weight_decay': 0.01, 'n_folds': 5, 'images_size': '512x512', 'model_name': 'tf_efficientnet_b3_ns', 'exp_train_name': 'exp_train_05', 'use_test_labels': False, 'seed': 42, 'device': 'cuda:0', 'folds_train_file': 'train_folds_groups'}\n"
+      "{'INPUT_DIR': '../input/', 'MODELS_DIR': '../models/', 'SUBMISSIONS_DIR': '../submissions/', 'batch_size': 10, 'learning_rate': 0.0003, 'n_epochs': 25, 'n_workers': 8, 'early_stopping_patience': 5, 'reduce_lr_on_plateau_patience': 1, 'reduce_lr_on_plateau_factor': 0.2, 'weight_decay': 0.001, 'n_folds': 5, 'images_size': '512x512', 'model_name': 'tf_efficientnet_b3_ns', 'exp_train_name': 'exp_train_05', 'use_test_labels': False, 'seed': 42, 'device': 'cuda:0', 'folds_train_file': 'train_folds_stratified'}\n"
      ]
     }
    ],
    "source": [
-    "exp_name = 'exp_train_05'\n",
+    "exp_name = 'exp_train_07'\n",
     "with open(join('../configs/', f'{exp_name}.yaml'), 'r') as stream:\n",
     "    try:\n",
     "        config = yaml.safe_load(stream)\n",
@@ -238,9 +238,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting result on hold-out set...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/332 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 fold model:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 332/332 [02:35<00:00,  2.14it/s]\n",
+      "  0%|          | 0/332 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 fold model:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 332/332 [02:34<00:00,  2.15it/s]\n",
+      "  0%|          | 0/332 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 fold model:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 332/332 [02:34<00:00,  2.15it/s]\n",
+      "  0%|          | 0/332 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 fold model:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 332/332 [02:34<00:00,  2.15it/s]\n",
+      "  0%|          | 0/332 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 fold model:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 332/332 [02:34<00:00,  2.15it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "ROC AUC on hold-out set: 0.8529\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print('Getting result on hold-out set...')\n",
     "\n",
@@ -268,6 +372,10 @@
     "preds /= len(folds)\n",
     "preds = preds.cpu().detach().numpy()\n",
     "\n",
+    "df_hold_out_pred = df_hold_out[['image_name', 'target']]\n",
+    "df_hold_out_pred['prediction'] = preds.reshape(-1, ).tolist()\n",
+    "df_hold_out_pred.to_csv(join(MODELS_DIR, exp_name, f'{exp_name}_hold_out.csv'), index=False)\n",
+    "\n",
     "hold_out_auc = roc_auc_score(df_hold_out['target'].values, preds)\n",
     "print(f'\\nROC AUC on hold-out set: {hold_out_auc:.4f}')"
    ]
@@ -281,25 +389,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "model_base_path = join(MODELS_DIR, exp_name, f'fold_1_weight.pth')\n",
-    "model = torch.load(model_base_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for parameter in model.parameters():\n",
-    "    parameter.requires_grad = False\n",
-    "for parameter in model.classifier.parameters():\n",
-    "    parameter.requires_grad = True"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
