--- a/src/EDA of predictions.ipynb
+++ b/src/EDA of predictions.ipynb
@@ -37,9 +37,21 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Number of samples in train: 33126\nTarget dictribution:\n0    98.237034\n1     1.762966\nName: target, dtype: float64\n\nNumber of samples in submission: 10982\nTarget dictribution:\n0    99.480969\n1     0.519031\nName: target, dtype: float64\n"
+     "output_type": "stream",
+     "text": [
+      "Number of samples in train: 33126\n",
+      "Target dictribution:\n",
+      "0    98.237034\n",
+      "1     1.762966\n",
+      "Name: target, dtype: float64\n",
+      "\n",
+      "Number of samples in submission: 10982\n",
+      "Target dictribution:\n",
+      "0    99.480969\n",
+      "1     0.519031\n",
+      "Name: target, dtype: float64\n"
+     ]
     }
    ],
    "source": [
@@ -62,9 +74,22 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
-     "text": "Number (N) of predictions in bins (Assuming class = 0 if p<=0.5 else 1)\n               Abs      % % of its class\n[0, 0.05]    10057  91.58          92.05\n(0.05, 0.1]    373   3.40           3.41\n(0.1, 0.15]    169   1.54           1.55\n(0.15, 0.2]    113   1.03           1.03\n(0.2, 0.5]     213   1.94           1.95\n(0.5, 0.8)      52   0.47          91.23\n[0.8, 0.85)      4   0.04           7.02\n[0.85, 0.9)      1   0.01           1.75\n[0.9, 0.95)      0   0.00           0.00\n[0.95, 1]        0   0.00           0.00\n"
+     "output_type": "stream",
+     "text": [
+      "Number (N) of predictions in bins (Assuming class = 0 if p<=0.5 else 1)\n",
+      "               Abs      % % of its class\n",
+      "[0, 0.05]    10057  91.58          92.05\n",
+      "(0.05, 0.1]    373   3.40           3.41\n",
+      "(0.1, 0.15]    169   1.54           1.55\n",
+      "(0.15, 0.2]    113   1.03           1.03\n",
+      "(0.2, 0.5]     213   1.94           1.95\n",
+      "(0.5, 0.8)      52   0.47          91.23\n",
+      "[0.8, 0.85)      4   0.04           7.02\n",
+      "[0.85, 0.9)      1   0.01           1.75\n",
+      "[0.9, 0.95)      0   0.00           0.00\n",
+      "[0.95, 1]        0   0.00           0.00\n"
+     ]
     }
    ],
    "source": [
@@ -130,7 +155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
