--- a/src/Run_Experiments.ipynb
+++ b/src/Run_Experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,14 +26,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# script params\n",
     "exp_tuneinfer_name = 'exp_finetune_01'\n",
-    "train_only_last_layer_options = ['false'] # ['true']\n",
-    "folds_train_files = [splitext(basename(path))[0] for path in glob(join(SMOOTHEDLABELS_DIR, '*_folds_*'))]\n",
+    "train_only_last_layer_options = ['true'] # ['false']\n",
+    "# folds_train_files = [splitext(basename(path))[0] for path in glob(join(SMOOTHEDLABELS_DIR, '*_folds_*'))]\n",
+    "folds_train_files = [splitext(basename(path))[0] for path in glob(join(SMOOTHEDLABELS_DIR, '*100-1_folds_*'))]\n",
     "\n",
     "finetune_params = list(product(train_only_last_layer_options, folds_train_files))\n",
     "len(finetune_params)"
@@ -41,9 +53,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 1/3 [32:27<1:04:55, 1947.87s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment №1 ended in ~32 minutes (- 17)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 67%|██████▋   | 2/3 [51:15<28:21, 1701.86s/it]  "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment №2 ended in ~18 minutes (- 17)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [1:10:03<00:00, 1401.15s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Experiment №3 ended in ~18 minutes (- 17)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for i, (train_only_last_layer, folds_train_file) in enumerate(tqdm(finetune_params)):\n",
     "    start_time = time.time()\n",
