Added english plots

--- a/src/EDA & Plots.ipynb
+++ b/src/EDA & Plots.ipynb
@@ -116,7 +116,19 @@
     "test['anatom_site_general_challenge'] = test['anatom_site_general_challenge'].map(anatom_site_general_challenge_tr)\n",
     "\n",
     "benign_malignant_tr = {'benign': 'Доброкачественная', 'malignant': 'Злокачественная'}\n",
-    "train['benign_malignant'] = train['benign_malignant'].map(benign_malignant_tr)"
+    "train['benign_malignant'] = train['benign_malignant'].map(benign_malignant_tr)\n",
+    "\n",
+    "# anatom_site_general_challenge_tr = {'oral/genital': 'Oral/Genital',\n",
+    "#                                     'palms/soles': 'Palms/Soles',\n",
+    "#                                     'head/neck': 'Head/Neck',\n",
+    "#                                     'upper extremity': 'Upper extremity',\n",
+    "#                                     'lower extremity': 'Lower extremity',\n",
+    "#                                     'torso': 'Torso'}\n",
+    "# train['anatom_site_general_challenge'] = train['anatom_site_general_challenge'].map(anatom_site_general_challenge_tr)\n",
+    "# test['anatom_site_general_challenge'] = test['anatom_site_general_challenge'].map(anatom_site_general_challenge_tr)\n",
+    "\n",
+    "# benign_malignant_tr = {'benign': 'Benign', 'malignant': 'Malignant'}\n",
+    "# train['benign_malignant'] = train['benign_malignant'].map(benign_malignant_tr)"
    ]
   },
   {
@@ -188,9 +200,14 @@
     "fig, ax = plt.subplots(figsize = (8,5))\n",
     "rects1 = ax.bar(x - width/2, benign_data, width, label=benign_malignant_tr['benign'], color='g')\n",
     "rects2 = ax.bar(x + width/2, maglignant_data, width, label=benign_malignant_tr['malignant'], color='r')\n",
+    "# rects1 = ax.bar(x - width/2, benign_data, width, label='Benign', color='g')\n",
+    "# rects2 = ax.bar(x + width/2, maglignant_data, width, label='Malignant', color='r')\n",
     "ax.set_ylabel('Количество изображений родинок пациента')\n",
     "ax.set_xlabel('Расположение на теле')\n",
     "ax.set_title('Количество пациентов по типам опухолей и их расположению')\n",
+    "# ax.set_ylabel('Number of patient\\'s moles images')\n",
+    "# ax.set_xlabel('Anatom site')\n",
+    "# ax.set_title('Number of patients by malignancy and anatomic site')\n",
     "ax.set_xticks(x)\n",
     "ax.set_xticklabels(labels)\n",
     "ax.legend()\n",
@@ -212,6 +229,7 @@
     "\n",
     "fig.tight_layout()\n",
     "fig.savefig('../plots/patients_target_site.png', dpi=300, bbox_inches='tight', transparent=True)\n",
+    "# fig.savefig('../plots/patients_target_site_en.png', dpi=300, bbox_inches='tight', transparent=True)\n",
     "plt.show()"
    ]
   },
@@ -228,13 +246,18 @@
     "ax.set_title('Количество пациентов с различным количеством изображений родинок')\n",
     "ax.set_xlabel('Количество изображений родинок')\n",
     "ax.set_ylabel('Количество пациентов')\n",
+    "# ax.set_title('Number of patients with different number of images')\n",
+    "# ax.set_xlabel('Number of moles images')\n",
+    "# ax.set_ylabel('Number of patients')\n",
     "ax.set_xticks(range(0, 120, 5))\n",
     "ax.set_yticks(list(range(0, 100, 10)) + list(range(100, 310, 20)))\n",
     "ax.set_xlim(0)\n",
     "stylize_axes(ax)\n",
     "ax.grid(True, axis='y')\n",
     "fig.tight_layout()\n",
-    "fig.savefig('../plots/pic_per_pacient.png', dpi=300, bbox_inches='tight', transparent=True)"
+    "fig.savefig('../plots/pic_per_pacient.png', dpi=300, bbox_inches='tight', transparent=True)\n",
+    "# fig.savefig('../plots/pic_per_pacient_en.png', dpi=300, bbox_inches='tight', transparent=True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -254,9 +277,14 @@
     "ax.set_title('Распределение возраста пациентов в момент снимка родинки')\n",
     "ax.set_xlabel('Возраст')\n",
     "ax.set_ylabel('Количество изображений')\n",
+    "# ax.set_title('Patient\\'s age distribution at the moment when picture was taken')\n",
+    "# ax.set_xlabel('Age')\n",
+    "# ax.set_ylabel('Number of images')\n",
     "ax.set_xticklabels([str(x*5) for x in ax.get_xticks()])\n",
     "fig.tight_layout()\n",
-    "fig.savefig('../plots/age_distr.png', dpi=300, bbox_inches='tight', transparent=True)"
+    "fig.savefig('../plots/age_distr.png', dpi=300, bbox_inches='tight', transparent=True)\n",
+    "# fig.savefig('../plots/age_distr_en.png', dpi=300, bbox_inches='tight', transparent=True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -269,11 +297,14 @@
     "\n",
     "width = 0.35\n",
     "\n",
-    "rects = ax.bar(train.groupby(['patient_id'])['age_approx'].nunique().value_counts().index, \n",
-    "               train.groupby(['patient_id'])['age_approx'].nunique().value_counts().values, color='k')\n",
+    "rects = ax.bar(train.groupby(['patient_id'])['age_approx'].nunique(dropna=False).value_counts().index, \n",
+    "               train.groupby(['patient_id'])['age_approx'].nunique(dropna=False).value_counts().values, color='k')\n",
     "ax.set_title('Количество разных пятёрок лет, на протяжении которых были сделаны изображения родинок')\n",
     "ax.set_ylabel('Количество пациентов')\n",
     "ax.set_xlabel('Количество пятёрок лет')\n",
+    "# ax.set_title('Number of different “five” years, during which the images were taken')\n",
+    "# ax.set_ylabel('Number of patients')\n",
+    "# ax.set_xlabel('Number of “five” years')\n",
     "\n",
     "def autolabel(rects):\n",
     "    \"\"\"Attach a text label above each bar in *rects*, displaying its height.\"\"\"\n",
@@ -288,16 +319,9 @@
     "autolabel(rects)\n",
     "stylize_axes(ax)\n",
     "fig.tight_layout()\n",
-    "fig.savefig('../plots/nuniq_age_per_patient.png', dpi=300, bbox_inches='tight', transparent=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train.groupby(['patient_id']).size()"
+    "fig.savefig('../plots/nuniq_age_per_patient.png', dpi=300, bbox_inches='tight', transparent=True)\n",
+    "# fig.savefig('../plots/nuniq_age_per_patient_en.png', dpi=300, bbox_inches='tight', transparent=True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -320,8 +344,10 @@
     "ax.boxplot(train.groupby(['patient_id']).size(), showfliers=False, vert=False)\n",
     "stylize_axes(ax)\n",
     "\n",
-    "ax.set_title('Диаграмма размаха по пациентам')\n",
+    "ax.set_title('Диаграмма размаха по кол-ву изображений по пациентам')\n",
     "ax.set_xlabel('Количество изображений')\n",
+    "# ax.set_title('Box plot of the number of patients\\' images')\n",
+    "# ax.set_xlabel('Number of images')\n",
     "\n",
     "ax.set_xlim(0)\n",
     "ax.set_ylim(0.8, 1.2)\n",
@@ -330,7 +356,9 @@
     "ax.grid(True, axis='x')\n",
     "\n",
     "fig.tight_layout()\n",
-    "fig.savefig('../plots/npics_per_patient_boxplot.png', dpi=300, bbox_inches='tight', transparent=True)"
+    "fig.savefig('../plots/npics_per_patient_boxplot.png', dpi=300, bbox_inches='tight', transparent=True)\n",
+    "# fig.savefig('../plots/npics_per_patient_boxplot_en.png', dpi=300, bbox_inches='tight', transparent=True)\n",
+    "plt.show()"
    ]
   },
   {
@@ -396,22 +424,38 @@
     "fig, axs = plt.subplots(1, n_cols, figsize=(n_cols*5,6))\n",
     "\n",
     "fig.suptitle('Распределение предсказаний на hold-out сете', y=1.05, fontsize=20)\n",
+    "# fig.suptitle('Hold-out set\\'s prediction distribution', y=1.05, fontsize=20)\n",
     "for i in range(n_cols):\n",
     "    temp_df = hold_outs[i]\n",
     "    axs[i].set_title(f'Эксперимент № {exps_n[i]}', fontsize=14)\n",
+    "    # axs[i].set_title(f'Experiment № {exps_n[i]}', fontsize=14)\n",
     "    sns.kdeplot(temp_df[temp_df['target'] == 0]['prediction'], shade=True, \n",
     "                label='Доброкачественная', color='g', ax=axs[i])\n",
+    "    # sns.kdeplot(temp_df[temp_df['target'] == 0]['prediction'], shade=True, \n",
+    "    #             label='Malignant', color='g', ax=axs[i])\n",
     "    sns.kdeplot(temp_df[temp_df['target'] == 1]['prediction'], shade=True, \n",
     "                label='Злокачественная', color='r', ax=axs[i])\n",
+    "    # sns.kdeplot(temp_df[temp_df['target'] == 1]['prediction'], shade=True, \n",
+    "    #             label='Benign', color='r', ax=axs[i])\n",
     "    axs[i].set_xlim(0, 1)\n",
     "    axs[i].set_xlabel('Значение предсказания', fontsize=14)\n",
+    "    # axs[i].set_xlabel('Prediction value', fontsize=14)\n",
     "    stylize_axes(axs[i])\n",
     "    axs[i].legend(prop={'size': 16})\n",
     "    axs[i].tick_params(axis='both', which='major', labelsize=16)\n",
     "\n",
     "fig.tight_layout()\n",
-    "fig.savefig('../plots/hold-out_2,6,7_kde.png', dpi=300, bbox_inches='tight', transparent=True)"
+    "fig.savefig('../plots/hold-out_2,6,7_kde.png', dpi=300, bbox_inches='tight', transparent=True)\n",
+    "# fig.savefig('../plots/hold-out_2,6,7_kde_en.png', dpi=300, bbox_inches='tight', transparent=True)\n",
+    "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
